# invasive-classifier

./: .pre-commit-config.yaml  LICENSE  README.md  env.yml  pyproject.toml
invasive_classifier/: config.py
invasive_classifier/data/: data_utils.py  dataset.py  dataset_invasive.py
invasive_classifier/inference/: validate.py
invasive_classifier/model/: track_classifier.py
invasive_classifier/train/: train.py  train_utils.py
invasive_classifier/utils/: classmap.py  plots.py
scripts/: check_classes.py
