[tool.poetry]
name = "invasive-classifier"
version = "0.1.0"
description = ""
authors = ["Tim ILes <twonzo72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
timm = "^1.0.19"
opencv-python-headless = "^4.12.0.88"
matplotlib = "^3.10.6"
pandas = "^2.3.2"
tensorboard = "^2.20.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
